--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <!DOCTYPE resources [
     <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
     <!ENTITY TERMUX_APP_NAME "Termux">
-    <!ENTITY TERMUX_X11_APP_NAME "Termux:X11">
+    <!ENTITY TERMUX_X11_APP_NAME "WEG™:X11⚡️Mod">
     ]>
 <resources>
     <string name="app_name">&TERMUX_X11_APP_NAME;</string>
 
-    <string name="not_connected">Not connected</string>
+    <string name="not_connected">Нет соединения</string>
     <string name="preferences_button_text">   PREFERENCES   </string>
     <string name="help_button_text">   HELP   </string>
     <string name="exit_button_text">   EXIT   </string>
