--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,112 +6,113 @@
 <resources>
     <string name="app_name">&TERMUX_X11_APP_NAME;</string>
 
-    <string name="not_connected">Нет соединения</string>
-    <string name="preferences_button_text">   PREFERENCES   </string>
-    <string name="help_button_text">   HELP   </string>
-    <string name="exit_button_text">   EXIT   </string>
-    <string name="extra_keys_config_desc">Here you can set value of extra-keys variable like in Termux app (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) and more \n
+   <string name="not_connected">Нет соединения</string>
+    <string name="preferences_button_text">Настройка</string>
+    <string name="help_button_text">YouTube WEG™</string>
+    <string name="help_button_text">Группа WEG™ в Telegram</string>
+    <string name="exit_button_text">Выход</string>
+    <string name="extra_keys_config_desc">Здесь вы можете установить значение переменной extra-keys, как в приложении Termux (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) и многое другое \n
 E.g. <b>META</b> for <i>META key</i>, \n
 <b>KEYBOARD</b> for <i>soft keyboard toggling key</i>, \n
 <b>PREFERENCES</b> for <i>preferences opening key</i>, \n
 <b>MOUSE_HELPER</b> for <i>mouse helper toggling key</i>, \n
 <b>STYLUS_HELPER</b> for <i>stylus click override overlay toggling key</i>, \n
 <b>EXIT</b> for <i>application exit key</i>.</string>
-    <string name="notification_content_text">Pull down to show options</string>
-    <string name="notification_open_preferences">Preferences</string>
-    <string name="notification_exit">Exit</string>
-    <string name="notification_restart_activity">Restart</string>
-    <string name="notification_toggle_soft_keyboard">Toggle IME</string>
-    <string name="notification_toggle_additional_key_bar">Toggle additional keyboard</string>
-    <string name="notification_release_pointer_and_keyboard_capture">Release captures</string>
-    <string name="notification_toggle_fullscreen">Toggle fullscreen</string>
+    <string name="notification_content_text">Потяните вниз, чтобы показать параметры/string>
+    <string name="notification_open_preferences">Настройка</string>
+    <string name="notification_exit">Выход</string>
+    <string name="notification_restart_activity">Перезапуск</string>
+    <string name="notification_toggle_soft_keyboard">Переключить IME</string>
+    <string name="notification_toggle_additional_key_bar">Переключить дополнительную клавиатуру</string>
+    <string name="notification_release_pointer_and_keyboard_capture">Выпуск захватов</string>
+    <string name="notification_toggle_fullscreen">Переключить полноэкранный режим</string>
 
-    <string name="pref_main">Preferences</string>
-    <string name="pref_output">Output</string>
-    <string name="pref_pointer">Pointer</string>
-    <string name="pref_kbd">Keyboard</string>
-    <string name="pref_other">Other</string>
-    <string name="pref_version">Version</string>
-    <string name="pref_ekbar">Extra key bar preferences</string>
-    <string name="pref_userActions">Response to user actions</string>
+    <string name="pref_main">Настройка</string>
+    <string name="pref_output">Выход</string>
+    <string name="pref_pointer">Указатель</string>
+    <string name="pref_kbd">Клавиатура</string>
+    <string name="pref_other">Другое</string>
+    <string name="pref_version">Версия</string>
+    <string name="pref_ekbar">Дополнительные настройки панели клавиш</string>
+    <string name="pref_userActions">Реакция на действия пользователя</string>
 
-    <string name="pref_displayResolutionMode">Display resolution mode</string>
-    <string name="pref_displayScale">Display scale, %</string>
-    <string name="pref_displayResolutionExact">Display resolution</string>
-    <string name="pref_displayResolutionCustom">Display resolution</string>
-    <string name="pref_adjustResolution">Adjust the set resolution to fit screen orientation</string>
-    <string name="pref_displayStretch">Stretch to fit display</string>
-    <string name="pref_Reseed">Reseed screen while soft keyboard is open</string>
-    <string name="pref_Reseed_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
-    <string name="pref_PIP">PIP mode</string>
-    <string name="pref_PIP_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
-    <string name="pref_fullscreen">Fullscreen</string>
-    <string name="pref_fullscreen_summary">Toggle immersive mode in your device display</string>
-    <string name="pref_forceOrientation">Screen orientation</string>
-    <string name="pref_hideCutout">Hide display cutout (if any)</string>
-    <string name="pref_keepScreenOn">Keep Screen On</string>
+    <string name="pref_displayResolutionMode">Режим разрешения дисплея</string>
+    <string name="pref_displayScale">Масштаб отображения, %</string>
+    <string name="pref_displayResolutionExact">Разрешение дисплея</string>
+    <string name="pref_displayResolutionCustom">Разрешение дисплея</string>
+    <string name="pref_adjustResolution">Отрегулировать установленное разрешение в соответствии с ориентацией экрана.</string>
+    <string name="pref_displayStretch">Растянуть по размеру дисплея</string>
+    <string name="pref_Reseed">Перезагрузить экран при открытой экранной клавиатуре</string>
+    <string name="pref_Reseed_summary">Размер экрана будет изменен, пока открыта программная клавиатура.</string>
+    <string name="pref_PIP">Режим PIP</string>
+    <string name="pref_PIP_summary">Показывать приложение в режиме «картинка в картинке» при нажатии кнопки «Домой» или кнопки «Недавние»</string>
+    <string name="pref_fullscreen">Полноэкранный</string>
+    <string name="pref_fullscreen_summary">Включить режим захвата на дисплее вашего устройства</string>
+    <string name="pref_forceOrientation">Ориентация экрана</string>
+    <string name="pref_hideCutout">Скрыть вырез на дисплее (если есть)</string>
+    <string name="pref_keepScreenOn">Экран всегда включен</string>
 
-    <string name="pref_touchMode">Touchscreen input mode</string>
-    <string name="pref_scaleTouchpad">Apply display scale factor to touchpad</string>
-    <string name="pref_showStylusClickOverride">Show stylus click options</string>
-    <string name="pref_showStylusClickOverride_summary">Stylus touch override, left, middle or right click (stylus only)</string>
-    <string name="pref_stylusIsMouse">Enable stylus mouse mode</string>
-    <string name="pref_stylusIsMouse_summary">Make your stylus work like a mouse. When activated, stylus will only move the cursor and send mouse clicks, ignoring pressure, angle, and tilt.</string>
-    <string name="pref_stylusButtonContactModifierMode">Stylus button contact modifier mode</string>
-    <string name="pref_stylusButtonContactModifierMode_summary">Enable this option to send right or middle mouse buttons only when stylus touches the screen while the button is pressed.</string>
-    <string name="pref_showMouseHelper">Show mouse click helper overlay</string>
-    <string name="pref_showMouseHelper_summary">Onscreen mouse buttons usable with touchpad</string>
-    <string name="pref_pointerCapture">Capture external pointer devices when possible</string>
-    <string name="pref_pointerCapture_summary">Intercept all hardware pointer events. Pointer is back to Android after pressing Escape key.</string>
-    <string name="pref_transformCapturedPointer">Transform captured pointer movements</string>
-    <string name="pref_capturedPointerSpeedFactor">Captured pointer speed factor, %</string>
-    <string name="pref_tapToMove">Enable tap-to-move for touchpads</string>
+    <string name="pref_touchMode">Режим ввода сенсорного экрана</string>
+    <string name="pref_scaleTouchpad">Применить коэффициент масштабирования дисплея к сенсорной панели</string>
+    <string name="pref_showStylusClickOverride">Показать параметры нажатия стилуса</string>
+    <string name="pref_showStylusClickOverride_summary">Переопределение касания стилуса, левый, средний или правый щелчок (только стилус)</string>
+    <string name="pref_stylusIsMouse">Включить режим мыши-стилуса</string>
+    <string name="pref_stylusIsMouse_summary">Заставьте свой стилус работать как мышь. При активации стилус будет только перемещать курсор и посылать щелчки мыши, игнорируя давление, угол и наклон..</string>
+    <string name="pref_stylusButtonContactModifierMode">Режим модификатора контакта кнопки стилуса</string>
+    <string name="pref_stylusButtonContactModifierMode_summary">Включите эту опцию, чтобы отправлять сигналы правой или средней кнопки мыши только тогда, когда стилус касается экрана при нажатой кнопке.</string>
+    <string name="pref_showMouseHelper">Показать наложение помощника по щелчку мыши</string>
+    <string name="pref_showMouseHelper_summary">Кнопки экранной мыши, используемые с сенсорной панелью</string>
+    <string name="pref_pointerCapture">По возможности захватыватить внешние указатели.</string>
+    <string name="pref_pointerCapture_summary">Перехват всех событий аппаратного указателя. Указатель возвращается к Android после нажатия клавиши Esc.</string>
+    <string name="pref_transformCapturedPointer">Преобразование захваченных движений указателя</string>
+    <string name="pref_capturedPointerSpeedFactor">Коэффициент скорости захваченного указателя, %</string>
+    <string name="pref_tapToMove">Включить функцию «tap-to-move» для сенсорных панелей</string>
 
-    <string name="pref_showAdditionalKbd">Show additional keyboard</string>
-    <string name="pref_showAdditionalKbd_summary">Show keyboard with additional keys.</string>
-    <string name="pref_showIMEWhileExternalConnected">Show IME with external keyboard</string>
-    <string name="pref_showIMEWhileExternalConnected_summary">Show software keyboard while hardware keyboard is connected.</string>
-    <string name="pref_preferScancodes">Prefer scancodes when possible</string>
-    <string name="pref_preferScancodes_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
-    <string name="pref_hardwareKbdScancodesWorkaround">Hardware keyboard scancodes workaround</string>
-    <string name="pref_hardwareKbdScancodesWorkaround_summary">Fixes scancodes on some devices. Might cause problems with multiple layouts.</string>
-    <string name="pref_dexMetaKeyCapture">Intercept system shortcuts</string>
-    <string name="pref_dexMetaKeyCapture_summary">Samsung Dex only. Allows interception of &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc.</string>
-    <string name="pref_enableAccessibilityService">Enable Accessibility service for intercepting system shortcuts manually.</string>
-    <string name="pref_enableAccessibilityService_summary">Open Accessibility settings.</string>
-    <string name="pref_enableAccessibilityServiceAutomatically">Enable Accessibility service for intercepting system shortcuts automatically.</string>
-    <string name="pref_enableAccessibilityServiceAutomatically_summary">Requires WRITE_SECURE_SETTINGS permission.</string>
-    <string name="pref_pauseKeyInterceptingWithEsc">Pause key intercepting with Esc key</string>
-    <string name="pref_filterOutWinkey">Filter out intercepted Win (Meta/Mod4) key.</string>
-    <string name="pref_filterOutWinkey_summary">Allows you to use Dex shortcuts while intercepting. Requires Accessibility service to work.</string>
-    <string name="pref_enableGboardCJK">Workaround to enable CJK Gboard</string>
-    <string name="pref_enableGboardCJK_summary">May require Android 14 and Gboard 14</string>
+    <string name="pref_showAdditionalKbd">Показать дополнительную клавиатуру</string>
+    <string name="pref_showAdditionalKbd_summary">Показать клавиатуру с дополнительными клавишами.</string>
+    <string name="pref_showIMEWhileExternalConnected">Показать IME с внешней клавиатурой</string>
+    <string name="pref_showIMEWhileExternalConnected_summary">Показывать программную клавиатуру при подключенной аппаратной клавиатуре.</string>
+    <string name="pref_preferScancodes">По возможности отдавать предпочтение скан-кодам</string>
+    <string name="pref_preferScancodes_summary">ПРазрешить X-серверу управлять раскладкой аппаратной клавиатуры (с настройками DE или setxkbmap).</string>
+    <string name="pref_hardwareKbdScancodesWorkaround">Обходной путь аппаратных скан-кодов клавиатуры</string>
+    <string name="pref_hardwareKbdScancodesWorkaround_summary">Исправлять сканкоды на некоторых устройствах. Могут вызывать проблемы с несколькими макетами.</string>
+    <string name="pref_dexMetaKeyCapture">Перехватывать системные ярлыки</string>
+    <string name="pref_dexMetaKeyCapture_summary">Только Samsung Dex. Позволяет перехватывать &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc.</string>
+    <string name="pref_enableAccessibilityService">Включите службу специальных возможностей для ручного перехвата системных ярлыков.</string>
+    <string name="pref_enableAccessibilityService_summary">Открыть настройки специальных возможностей.</string>
+    <string name="pref_enableAccessibilityServiceAutomatically">Включить службу специальных возможностей для автоматического перехвата системных ярлыков.</string>
+    <string name="pref_enableAccessibilityServiceAutomatically_summary">Требуется разрешение WRITE_SECURE_SETTINGS.</string>
+    <string name="pref_pauseKeyInterceptingWithEsc">Перехват клавиши «Пауза» с помощью клавиши Esc</string>
+    <string name="pref_filterOutWinkey">Отфильтровывать перехваченную клавишу Win (Meta/Mod4).</string>
+    <string name="pref_filterOutWinkey_summary">Позволяет использовать сочетания клавиш Dex при перехвате. Для работы требуется служба специальных возможностей.</string>
+    <string name="pref_enableGboardCJK">Обходной путь для включения CJK Gboard</string>
+    <string name="pref_enableGboardCJK_summary">Может потребоваться Android 14 и Gboard 14</string>
 
-    <string name="pref_clipboardEnable">Clipboard sharing</string>
-    <string name="pref_requestNotificationPermission">Request notification permission</string>
-    <string name="pref_xrMode">Meta Oculus XR mode</string>
-    <string name="pref_configureResponseToUserActions">Configure response to user actions</string>
-    <string name="pref_storeSecondaryDisplayPreferencesSeparately">Store preferences for secondary displays separately</string>
-    <string name="pref_storeSecondaryDisplayPreferencesSeparately_summary">Open this screen on display you want to configure</string>
+    <string name="pref_clipboardEnable">Совместное использование буфера обмена</string>
+    <string name="pref_requestNotificationPermission">Запросить разрешение на уведомление</string>
+    <string name="pref_xrMode">Режим Meta Oculus XR</string>
+    <string name="pref_configureResponseToUserActions">Настроить реакцию на действия пользователя</string>
+    <string name="pref_storeSecondaryDisplayPreferencesSeparately">Сохранить настройки для дополнительных дисплеев отдельно</string>
+    <string name="pref_storeSecondaryDisplayPreferencesSeparately_summary">Открыть этот экран на дисплее, который вы хотите настроить.</string>
 
-    <string name="pref_adjustHeightForEK">Adjust display height for extra keys bar</string>
-    <string name="pref_adjustHeightForEK_summary">May cause screen flickering during toggling EK bar.</string>
-    <string name="pref_useTermuxEKBarBehaviour">Deactivate special keys on additional key bar after each keypress</string>
-    <string name="pref_useTermuxEKBarBehaviour_summary">Use long-tap to lock special keys</string>
-    <string name="pref_opacityEKBar">Opacity of extra keys bar, %</string>
-    <string name="pref_extra_keys_config">Extra keys config</string>
+    <string name="pref_adjustHeightForEK">Отрегулировать высоту отображения панели дополнительных клавиш</string>
+    <string name="pref_adjustHeightForEK_summary">Отрегулировать форму отображаемой панели дополнительных клавиш..</string>
+    <string name="pref_useTermuxEKBarBehaviour">Деактивировать специальные клавиши на дополнительной панели клавиш после каждого нажатия клавиши</string>
+    <string name="pref_useTermuxEKBarBehaviour_summary">Использовать долгое нажатие для блокировки специальных клавиш.</string>
+    <string name="pref_opacityEKBar">Непрозрачность панели дополнительных клавиш, %</string>
+    <string name="pref_extra_keys_config">Конфигурация дополнительных клавщ</string>
 
-    <string name="pref_swipeUpAction">Three finger swipe up</string>
-    <string name="pref_swipeDownAction">Three finger swipe down</string>
-    <string name="pref_volumeUpAction">Volume up</string>
-    <string name="pref_volumeDownAction">Volume down</string>
-    <string name="pref_backButtonAction">Back button</string>
-    <string name="pref_notificationTapAction">Notification tap</string>
-    <string name="pref_notificationButton0Action">Notification first button</string>
-    <string name="pref_notificationButton1Action">Notification second button</string>
-    <string name="pref_mediaKeysAction">Media keys</string>
+    <string name="pref_swipeUpAction">Провести тремя пальцами вверх</string>
+    <string name="pref_swipeDownAction">Провести тремя пальцами вниз</string>
+    <string name="pref_volumeUpAction">Увеличение громкости</string>
+    <string name="pref_volumeDownAction">Уменьшение громкости</string>
+    <string name="pref_backButtonAction">Кнопка «Назад»</string>
+    <string name="pref_notificationTapAction">Нажатие на уведомление</string>
+    <string name="pref_notificationButton0Action">Первая кнопка уведомления</string>
+    <string name="pref_notificationButton1Action">Вторая кнопка уведомления</string>
+    <string name="pref_mediaKeysAction">Медиа-кнопка</string>
 
-    <string name="pref_summary_requiresExactOrCustom">Requires "display resolution mode" to be "exact" or "custom"</string>
-    <string name="pref_summary_requiresIntercepting">Requires intercepting system shortcuts with Dex mode or with Accessibility service</string>
-    <string name="pref_summary_requiresTrackpadAndNative">Requires "Touchscreen input mode" to be "Trackpad" and "Display resolution mode" to be not "native"</string>
+    <string name="pref_summary_requiresExactOrCustom">Требуется, чтобы «режим разрешения дисплея» был «точным» или «пользовательским»</string>
+    <string name="pref_summary_requiresIntercepting">Требуется перехват системных ярлыков с помощью режима Dex или службы специальных возможностей</string>
+    <string name="pref_summary_requiresTrackpadAndNative">Requires "«Режим сенсорного ввода» должен быть «Трекпад», а «Режим разрешения дисплея» — не «исходный»."</string>
 </resources>
