--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,15 @@
 
     <string name="not_connected">Нет соединения</string>
     <string name="preferences_button_text">Настройка</string>
-    <string name="help_button_text">YouTube WEG™</string>
     <string name="help_button_text">Группа WEG™ в Telegram</string>
     <string name="exit_button_text">Выход</string>
     <string name="extra_keys_config_desc">Здесь вы можете установить значение переменной extra-keys, как в приложении Termux (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) и многое другое \n
 E.g. <b>META</b> for <i>META key</i>, \n
-<b>KEYBOARD</b> for <i>soft keyboard toggling key</i>, \n
-<b>PREFERENCES</b> for <i>preferences opening key</i>, \n
-<b>MOUSE_HELPER</b> for <i>mouse helper toggling key</i>, \n
-<b>STYLUS_HELPER</b> for <i>stylus click override overlay toggling key</i>, \n
-<b>EXIT</b> for <i>application exit key</i>.</string>
+<b>KEYBOARD</b> для <i>клавиши переключения программной клавиатуры</i>, \n
+<b>PREFERENCES</b> для <i>ключа открытия настроек</i>, \n
+<b>MOUSE_HELPER</b> для <i>клавиши переключения помощника мыши</i>, \n
+<b>STYLUS_HELPER</b> для <i>нажатия стилуса, переопределяет клавишу переключения наложения</i>, \n
+<b>EXIT</b> для <i>клавиши выхода из приложения</i>.</string>
     <string name="notification_content_text">Потяните вниз, чтобы показать параметры</string>
     <string name="notification_open_preferences">Настройка</string>
     <string name="notification_exit">Выход</string>
