--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@ E.g. <b>META</b> for <i>META key</i>, \n
     <string name="pref_kbd">Клавиатура</string>
     <string name="pref_other">Другое</string>
     <string name="pref_version">Версия</string>
+    <string name="pref_Translation">Перевод</string>
     <string name="pref_ekbar">Дополнительные настройки панели клавиш</string>
     <string name="pref_userActions">Реакция на действия пользователя</string>
 
